fix: corrected images overflow in dataset

--- a/css/dataset.css
+++ b/css/dataset.css
@@ -68,6 +68,7 @@
     display: flex;
     position:relative;
     border-radius: 6px;
+    overflow: hidden;
 }
 
 .small_img_container:hover{
